--- a/settings.gradle
+++ b/settings.gradle
@@ -2,10 +2,9 @@ pluginManagement {
     repositories {
         gradlePluginPortal()
         maven {
-            name = 'MinecraftForge'
-            url = 'https://maven.minecraftforge.net/'
+            name = 'NeoForged'
+            url = 'https://maven.neoforged.net/releases'
         }
-        maven { url = 'https://maven.parchmentmc.org' }
     }
 }
 
